# backend-scaffolding

./: .gitignore  README.md  alembic.ini  dependencies.py  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  a3c753b64400_init.py
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/api/: items.py
app/utils/: cache.py  queue.py  workers.py
app/utils/ai/: ai_provider.py
